update toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ dependencies = [
     # Async support
     "aiohttp>=3.9.0",
     "aiofiles>=23.2.0",
+    # Google AI and ADK dependencies
+    "google-adk>=0.1.0",
+    "google-genai>=0.1.0",
 ]
 
 [project.optional-dependencies]
