--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,4 @@
-# Read the Docs configuration file for Circuit Synth
+# Read the Docs configuration file for Circuit-Synth
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 version: 2
@@ -8,26 +8,18 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-    # Optionally install additional tools
-    # uv: latest
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
-  fail_on_warning: true
-
-# Optionally build your docs in additional formats such as PDF and ePub
-formats:
-  - pdf
-  - epub
+  fail_on_warning: false
 
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
+    - requirements: docs/requirements.txt
     - method: pip
       path: .
       extra_requirements:
         - dev
-    - requirements: docs/requirements.txt
