--- a/rust_modules/rust_symbol_cache/pyproject.toml
+++ b/rust_modules/rust_symbol_cache/pyproject.toml
@@ -15,6 +15,9 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
+dependencies = [
+    "maturin>=1.9.2",
+]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
