update new project generation, delete examples we dont need

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,6 +161,7 @@ members = [
     "test-uv-workflow",
     "test-setup",
     "my_kicad_project",
+    "my_kicad_proejct",
 ]
 
 [dependency-groups]
