Implement single source of truth for version management
- Use dynamic versioning in pyproject.toml (reads from circuit_synth.__version__)
- Update __init__.py to version 0.8.37 (single source of truth)
- No more manual version updates in multiple files

Fixes #149 (P0 - Version Number Chaos)

Before: version scattered across 4 files (pyproject.toml, __init__.py, git tags, PyPI)
After: Single source in __init__.py, auto-propagated everywhere

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "circuit_synth"
-version = "0.8.37"
+dynamic = ["version"]
 description = "Pythonic circuit design for production-ready KiCad projects"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -143,6 +143,9 @@ Issues = "https://github.com/circuit-synth/circuit-synth/issues"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+
+[tool.setuptools.dynamic]
+version = {attr = "circuit_synth.__version__"}
 
 # Include all packages from src
 [tool.setuptools.packages.find]
