Fix CLI commands: add jlc-fast, remove broken commands
- Added jlc-fast command (fully implemented, 286 lines of code)
- Removed broken cs-fast-gen-setup (module doesn't exist)
- Removed broken install-kicad-plugins (module doesn't exist)

Fixes #149 (P0 - Missing jlc-fast CLI Command)

Users can now run:
  jlc-fast search STM32
  jlc-fast cheapest "10uF 0805"
  jlc-fast most-available LM358
  jlc-fast benchmark

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,14 +126,17 @@ cs-library-setup = "circuit_synth.tools.setup.library_api_setup:show_library_set
 
 # Fast Generation Tools
 cs-fast-gen-demo = "circuit_synth.fast_generation.demo:main_cli"
-cs-fast-gen-setup = "fast_generation_setup:main"
+
+# Fast JLCPCB Search CLI
+jlc-fast = "circuit_synth.tools.jlc_fast_search_cli:cli"
 
 # Test Plan Generation - DISABLED: Files don't exist yet
 # create-test-plan = "circuit_synth.tools.test_plan_commands:create_test_plan"
 # generate-manufacturing-tests = "circuit_synth.tools.test_plan_commands:generate_manufacturing_tests"
 
-# Plugin Management
-install-kicad-plugins = "install_kicad_plugins:main"
+# Plugin Management - REMOVED: Modules don't exist
+# install-kicad-plugins = "install_kicad_plugins:main"  # BROKEN
+# cs-fast-gen-setup = "fast_generation_setup:main"  # BROKEN
 
 [project.urls]
 Homepage = "https://github.com/circuit-synth/circuit-synth"
