🔖 Bump version to 0.10.2 and include example_project in package
- Updated version to 0.10.2
- Modified pyproject.toml to include all example_project files recursively
- Users will now get the complete example_project template when running cs-new-project
- Includes full ESP32-C6 dev board example with all circuit patterns

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,13 +158,14 @@ where = ["src"]
 circuit_synth = [
     "py.typed",
     "data/templates/project/*",
-    "data/templates/claude/*", 
+    "data/templates/claude/*",
     "data/templates/memory_bank/*",
-    "data/templates/example_project/*",
-    "data/templates/example_project/circuit-synth/*",
-    "data/templates/example_project/.claude/*",
-    "data/templates/example_project/.claude/agents/*/*",
-    "data/templates/example_project/.claude/commands/*/*",
+    # Include all files in example_project recursively
+    "data/templates/example_project/**/*",
+    "data/templates/example_project/**/**/*",
+    "data/templates/example_project/**/**/**/*",
+    # Explicitly include hidden files in .claude directory
+    "data/templates/example_project/.claude/**/*",
     "data/templates/project_template/*",
     "data/templates/project_template/circuit-synth/*",
     "data/templates/project_template/.claude/*",
