chore: Update submodule, lock file, and gitignore for release
- Update kicad-sch-api submodule to latest commit
- Update uv.lock with latest dependencies
- Add cs-new-project-artifacts to gitignore (test artifacts)

--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,7 @@ test_single_resistor/
 test_designator/
 bbox-tests/
 professional_circuits/
+cs-new-project-artifacts/
 
 # Generated KiCad projects at root
 ESP32_C6_Dev_Board/
