refactor: Simplify bidirectional tests 01-04 for manual verification
Replace complex programmatic tests with simple, visual verification tests:

Changes:
- Remove fixture complexity, environment variables, temp directories
- Replace AST parsing and programmatic assertions with visual checks
- Each test generates output to named 'generated_*' folders
- Clear print statements guide manual verification
- Users can open files in KiCad and visually inspect results

Benefits:
- Much easier to understand and debug
- Can verify by eye instead of reading complex test logic
- Clearer what each test is actually checking
- More maintainable - less abstraction

Tests simplified:
- 01_blank_projects: 3 simple tests (Python→KiCad, KiCad→Python, round-trip)
- 02_single_component: 3 simple tests (same pattern for single resistor)
- 03_position_preservation: 3 tests showing position data and verification steps
- 04_multiple_components: 2 tests for multi-component circuits

Also updated .gitignore to exclude generated_* test output directories.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ BidirectionalTest/
 bidirectional_test/BidirectionalTest/
 bidirectional_test/main_generated/
 blank/
+tests/bidirectional_new/*/generated_*
+tests/bidirectional_new/*/test_artifacts/
