chore: Remove monkey-patch and update kicad-sch-api to v0.4.3
The Symbol comparison bug is now fixed in kicad-sch-api v0.4.3,
so the temporary monkey-patch is no longer needed.

Changes:
- Update pyproject.toml: kicad-sch-api>=0.4.2 → >=0.4.3
- Remove src/circuit_synth/__init__.py: monkey-patch import
- Remove src/circuit_synth/kicad/kicad_sch_api_patch.py
- Update submodules/kicad-sch-api to v0.4.3 (a42706b)

The fix is now provided by the upstream package itself.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     # Cache and performance dependencies
     "cachetools>=5.3.0",
     # KiCad API integration
-    "kicad-sch-api>=0.4.2",  # Requires 0.4.2+ for text_box escaping fix
+    "kicad-sch-api>=0.4.3",  # Requires 0.4.3+ for Symbol comparison fix
     "kicad-pcb-api>=0.1.0",
     "packaging>=21.0",
     # Additional data processing
