--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     # Cache and performance dependencies
     "cachetools>=5.3.0",
     # KiCad API integration
-    "kicad-sch-api>=0.4.4",  # Requires 0.4.4+ for stable hierarchical label support
+    "kicad-sch-api>=0.4.5",  # Requires 0.4.5+ for hierarchical symbol instance support
     "kicad-pcb-api>=0.1.0",
     "packaging>=21.0",
     # Additional data processing
