fix: Correct CLI provider command template and pipeline state stage result access
- Fix TACWorkerAdapter to access stage_results dict correctly
- Update claude-cli command template to use stdin piping
- Add bash wrapping for proper file redirection
- Use absolute paths with .resolve() for file references
- Add JSON parsing for workflow_config in dashboard API

Fixes the 'Stage result not found' error and enables actual Claude CLI execution.

--- a/adws/config.toml
+++ b/adws/config.toml
@@ -16,13 +16,10 @@ issue_label = "rpi-auto"  # Only process issues with this label
 
 [providers.claude-cli]
 enabled = true
+# Command will be: cat {prompt_file} | claude -p --model {model} --output-format stream-json --verbose --dangerously-skip-permissions | tee {output_file}
 command_template = [
-    "claude",
-    "-p", "{prompt_file}",
-    "--model", "{model}",
-    "--output-format", "stream-json",
-    "--verbose",
-    "--dangerously-skip-permissions"
+    "bash", "-c",
+    "cat '{prompt_file}' | claude -p --model '{model}' --output-format stream-json --verbose --dangerously-skip-permissions | tee '{output_file}'"
 ]
 
 [providers.openrouter]
