--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,14 @@ coordinator-integration-example.py
 
 # Hook logs (runtime generated)
 .claude/hook_logs/
+
+# Debug and test files
+debug_*.py
+debug_*/
+test_hierarchical.py
+test_hierarchical/
+power_supply_module/
+agents/
+release.log
+tests/unit/test_hierarchical_decorator.py
+tests/unit/test_issue_538_regression.py
